--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <body>
     <h1>Bienvenue</h1>
     <p>Bienvenue sur ma page HTML, celle de Matias !</p>
+    <p>Je suis un nouvel étudiant du cours de traitement automatique de Corpus</p>
     </body>
 </html>
