Qualité de Louis

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <body>
     <h1>Bienvenue</h1>
     <p>Bienvenue sur ma page HTML, celle de Matias !</p>
-    <p>Je suis un nouvel étudiant du cours de traitement automatique de Corpus</p>
-    <p>\n Louis de Viron est le meilleur assistant de traitement automatique de Corpus</p>
+    <p>Je suis un nouvel étudiant du cours de traitement automatique de Corpus.</p>
+    <p>\n Louis de Viron est le meilleur assistant de traitement automatique de Corpus.</p>
+    <p>Il explique bien et ses TPs sont super dynamiques. </p>
     </body>
 </html>
