début du projet de petite page web

--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
- <html>
-    <head>
-    <title>Page d'accueil</title>
-    <body>
-    <h1>Bienvenue</h1>
-    <p>Bienvenue sur ma page HTML, celle de Matias !</p>
-    <p>Je suis un nouvel étudiant du cours de traitement automatique de Corpus.</p>
-    <p>Louis de Viron est le meilleur assistant de traitement automatique de Corpus.</p>
-    <p>Il explique bien et ses TPs sont super dynamiques. </p>
-    <ul>
-        <li>++</li>
-        <li>+</li>
-        <li>-</li>
-        <li>--</li>
-    </ul>
-    </body>
+<html>
+<head>
+    <title>Présentation de ma thèse</title>
+</head>
+<body>
+    <h1>Présentation de ma thèse</h1>
+    <p>Voici une brève présentation de ma thèse. Je fais beaucoup d'analyses spatiales dans le cadre de ma thèse.</p>
+    <h2>Cartes</h2>
+    <p>Voici quelques cartes que j'ai créées pour illustrer mes analyses.</p>
+    <iframe src="map_2024/Belgique_voronoi.html" width="50%" height="450"></iframe>
+    <iframe src="map_2024/pavage_secondaire_pop_12_18_meilleur.html" width="50%" height="450"></iframe>
+    <iframe src="map_2024/Belgique_voronoi.html" width="50%" height="450"></iframe>
+    <!-- Add more iframes as needed -->
+</body>
 </html>
