--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
         <p>Voici quelques cartes que j'ai créées pour illustrer mes analyses.</p>
         <div class="row">
             <div class="col-lg-6 mb-4">
-                <div class="card">
-                    <div class="card-body">
+                <div class="card-body">
+                    <a href="map_2024/Belgique_voronoi.html" target="_blank">
                         <iframe src="map_2024/Belgique_voronoi.html" width="100%" height="450"></iframe>
-                    </div>
+                    </a>
                 </div>
             </div>
             <div class="col-lg-6 mb-4">
-                <div class="card">
-                    <div class="card-body">
+                <div class="card-body">
+                    <a href="map_2024/pavage_secondaire_pop_12_18_meilleur.html" target="_blank">
                         <iframe src="map_2024/pavage_secondaire_pop_12_18_meilleur.html" width="100%" height="450"></iframe>
-                    </div>
+                    </a>
                 </div>
             </div>
             <!-- Add more cards as needed -->
