--- a/index.html
+++ b/index.html
@@ -13,16 +13,14 @@
         <div class="row">
             <div class="col-lg-6 mb-4">
                 <div class="card-body">
-                    <a href="map_2024/Belgique_voronoi.html" target="_blank">
-                        <iframe src="map_2024/Belgique_voronoi.html" width="100%" height="450"></iframe>
-                    </a>
+                    <iframe src="map_2024/Belgique_voronoi.html" width="100%" height="450"></iframe>
+                    <a href="map_2024/Belgique_voronoi.html" target="_blank">Ouvrir dans un nouvel onglet</a>
                 </div>
             </div>
             <div class="col-lg-6 mb-4">
                 <div class="card-body">
-                    <a href="map_2024/pavage_secondaire_pop_12_18_meilleur.html" target="_blank">
-                        <iframe src="map_2024/pavage_secondaire_pop_12_18_meilleur.html" width="100%" height="450"></iframe>
-                    </a>
+                    <iframe src="map_2024/pavage_secondaire_pop_12_18_meilleur.html" width="100%" height="450"></iframe>
+                    <a href="map_2024/pavage_secondaire_pop_12_18_meilleur.html" target="_blank">Ouvrir dans un nouvel onglet</a>
                 </div>
             </div>
             <!-- Add more cards as needed -->
