--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <body>
     <div class="container">
         <div class="row">
+            <button id="toggleSidebar" class="btn btn-primary">Toggle Sidebar</button>
             <nav class="col-md-2 d-none d-md-block bg-light sidebar">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
@@ -73,6 +74,16 @@
             </main>
         </div>
     </div>
+    <script>
+        document.getElementById('toggleSidebar').addEventListener('click', function() {
+            var sidebar = document.querySelector('.sidebar');
+            if (sidebar.style.display === 'none') {
+                sidebar.style.display = 'block';
+            } else {
+                sidebar.style.display = 'none';
+            }
+        });
+    </script>
     <script> document.getElementById('lastUpdate').textContent = document.lastModified;</script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
