--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
     </style>
 </head>
 <body>
+    <div class="header">
+        <button id="toggleSidebar" class="btn btn-primary">Toggle Sidebar</button>
+    </div>
     <div class="container">
         <div class="row">
-            <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-            <button id="toggleSidebar" class="btn btn-primary">Cacher la table des matières</button>
+            <nav class="col-md-2 bg-light sidebar">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
@@ -62,14 +64,14 @@
             <div class="row">
                 <div class="col-lg-6 mb-4">
                     <div class="card-body">
-                        <h3 id="chapter1">Méthode de Voronoï appliquée aux écoles secondaires</h3>
+                        <h4 id="chapter1">Méthode de Voronoï appliquée aux écoles secondaires</h4>
                         <iframe src="map_2024/Belgique_voronoi.html" width="100%" height="450"></iframe>
                         <a href="map_2024/Belgique_voronoi.html" target="_blank">Ouvrir dans un nouvel onglet</a>
                     </div>
                 </div>
                 <div class="col-lg-6 mb-4">
                     <div class="card-body">
-                        <h3 id="chapter2">Méthode de Voronoï contenant la population de 12 à 18 ans par tuile</h3>
+                        <h4 id="chapter2">Méthode de Voronoï contenant la population de 12 à 18 ans par tuile</h4>
                         <iframe src="map_2024/pavage_secondaire_pop_12_18_meilleur.html" width="100%" height="450"></iframe>
                         <a href="map_2024/pavage_secondaire_pop_12_18_meilleur.html" target="_blank">Ouvrir dans un nouvel onglet</a>
                     </div>
