--- a/annexe.html
+++ b/annexe.html
@@ -6,7 +6,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <button id="toggleSidebar" class="btn btn-primary">Toggle Sidebar</button>
+            <button id="toggleSidebar" class="btn btn-primary">Cacher table des matières</button>
         </div>
         <div class="row">
             <nav class="col-md-2 bg-light sidebar">
