--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     </style>
 </head>
 <body>
+    <div class="header" id="header">
+        <button id="toggleSidebar" class="btn btn-primary">Cacher table des matières</button>
+    </div>
     <div class="container">
-        <div class="header">
-            <button id="toggleSidebar" class="btn btn-primary">Cacher table des matières</button>
-        </div>
         <div class="row">
             <nav class="col-md-2 bg-light sidebar">
                 <div class="sidebar-sticky">
