--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@ body {
 	visibility: visible;
 }
 		</style>
-		<link id='-gd-engine-icon' rel='icon' type='image/png' href='First Game Web.icon.png' />
-<link rel='apple-touch-icon' href='First Game Web.apple-touch-icon.png'/>
-
+		<link id='-gd-engine-icon' rel='icon' type='image/png' href='index.icon.png' />
+<link rel='apple-touch-icon' href='index.apple-touch-icon.png'/>
+<script src="coi-serviceworker.js"></script>
 	</head>
 	<body>
 		<canvas id="canvas">
@@ -135,9 +135,9 @@ body {
 			<div id="status-notice" class="godot" style="display: none;"></div>
 		</div>
 
-		<script src="First Game Web.js"></script>
+		<script src="index.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"First Game Web","experimentalVK":false,"fileSizes":{"First Game Web.pck":1827232,"First Game Web.wasm":49282035},"focusCanvas":true,"gdextensionLibs":[]};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":1829680,"index.wasm":49282035},"focusCanvas":true,"gdextensionLibs":[]};
 const engine = new Engine(GODOT_CONFIG);
 
 (function () {
